<resources>
    <string name="app_name">CheesyBackend</string>
    <string name="email_hint">Email</string>
    <string name="login_txt">Login</string>
    <string name="register_text">Register</string>

    //registration page hints
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="zip">Zip Code</string>
    <string name="password">Password</string>
    <string name="create_btn">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Search</string>
    <string name="title_order">Orders</string>
    <string name="title_account">Account</string>

</resources>