<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <ImageView
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/editTextFirstName"
        android:hint="@string/f_name"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/et_style"/>

    <EditText
        android:id="@+id/editTextLastName"
        android:hint="@string/l_name"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
        android:background="@drawable/et_style"/>

    <EditText
        android:id="@+id/editTextDoB"
        android:hint="@string/date_of_birth"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextLastName"
        android:background="@drawable/et_style"
        android:inputType="date"/>

    <EditText
        android:id="@+id/editTextAddress"
        android:hint="@string/address"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDoB"
        android:background="@drawable/et_style"
        android:inputType="textPostalAddress"/>

    <EditText
        android:id="@+id/editTextZipCode"
        android:hint="@string/zip"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAddress"
        android:background="@drawable/et_style"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:hint="@string/email_hint"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextZipCode"
        android:background="@drawable/et_style"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        android:background="@drawable/et_style"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/create_account_btn"
        android:text="@string/create_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"/>
    <ProgressBar
        android:id="@+id/progressCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="40dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>