<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizzabackground"
    tools:context=".EditInfo">

    <EditText
        android:id="@+id/changeFName"
        android:hint="@string/f_name"
        android:textAlignment="center"
        android:textSize="21sp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/et_style"/>
    <TextView
        android:id="@+id/FNametxt"
        android:text="First Name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/changeFName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <EditText
        android:id="@+id/changeLName"
        android:hint="@string/l_name"
        android:textAlignment="center"
        android:textSize="21sp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeFName"
        android:background="@drawable/et_style"/>
    <TextView
        android:text="Last Name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/changeLName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/changeEmail"
        android:hint="@string/email_hint"
        android:textAlignment="center"
        android:textSize="21sp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeLName"
        android:background="@drawable/et_style"/>
    <TextView
        android:text="Email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/changeEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/changeDOB"
        android:hint="@string/date_of_birth"
        android:textAlignment="center"
        android:textSize="21sp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeEmail"
        android:background="@drawable/et_style"/>
    <TextView
        android:text="Date Of Birth"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/changeDOB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/infoChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeDOB"
        app:layout_constraintBottom_toTopOf="@id/Tabs"
        android:text="Save Changes"/>

    <Button
        android:id="@+id/passwordResetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:text="Reset Password"
        app:layout_constraintBottom_toTopOf="@id/Tabs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoChangeButton"/>

    <LinearLayout
        android:id="@+id/Tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="bottom">
        <ImageButton
            android:id="@+id/SearchTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_search"
            android:src="@drawable/search_icon"
            android:background="@color/btn_red"
            />
        <ImageButton
            android:id="@+id/OrderTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_order"
            android:src="@drawable/order_icon"
            android:background="@color/btn_red"
            />
        <ImageButton
            android:id="@+id/AccountTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_account"
            android:src="@drawable/account_icon"
            android:background="@color/green"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>