<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizzabackground"
    android:orientation="vertical"
    tools:context=".Orders">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            app:layoutManager="LinearLayoutManager"
            tools:ignore="MissingClass"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <LinearLayout
            android:id="@+id/Tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="10"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="bottom">
            <ImageButton
                android:id="@+id/SearchTab"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_height="60dp"
                android:contentDescription="@string/title_search"
                android:src="@drawable/search_icon"
                android:background="@color/btn_red"
                />
            <ImageButton
                android:id="@+id/OrderTab"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_height="60dp"
                android:contentDescription="@string/title_order"
                android:src="@drawable/order_icon"
                android:background="@color/green"
                />
            <ImageButton
                android:id="@+id/AccountTab"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_height="60dp"
                android:contentDescription="@string/title_account"
                android:src="@drawable/account_icon"
                android:background="@color/btn_red"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>