<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".SearchRestraunt">



        <EditText
            android:id="@+id/searchbar"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="256dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/et_style"
            android:hint="Search" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:text="Search"
        app:layout_constraintLeft_toRightOf="@id/searchbar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_tasks"
        android:layout_width="385dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/SearchButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:ignore="MissingClass"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="bottom">
        <ImageButton
            android:id="@+id/SearchTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_search"
            android:src="@drawable/search_icon"
            android:background="@color/btn_red"
            />
        <ImageButton
            android:id="@+id/OrderTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_order"
            android:src="@drawable/order_icon"
            android:background="@color/btn_red"
            />
        <ImageButton
            android:id="@+id/AccountTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_account"
            android:src="@drawable/account_icon"
            android:background="@color/btn_red"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>