<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountPasswordReset"
    android:background="@drawable/pizzabackground"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="200dp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:inputType="textEmailAddress"/>
    <TextView
        android:id="@+id/viewOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="Old Password"/>
    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:inputType="textPassword"/>
   <TextView
    android:id="@+id/viewNewPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:textStyle="bold"
    android:textSize="20sp"
    android:text="New Password"/>
    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/ResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Reset Password"/>

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="bottom">
        <ImageButton
            android:id="@+id/SearchTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_search"
            android:src="@drawable/search_icon"
            android:background="@color/btn_red"
            />
        <ImageButton
            android:id="@+id/OrderTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_order"
            android:src="@drawable/order_icon"
            android:background="@color/btn_red"
            />
        <ImageButton
            android:id="@+id/AccountTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_account"
            android:src="@drawable/account_icon"
            android:background="@color/green"
            />
    </LinearLayout>

</LinearLayout>