<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Account">
    <Button
        android:id="@+id/personalInfoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="150dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/et_style"
        android:text="Personal Information"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AddressBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/personalInfoBtn"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/et_style"
        android:text="Saved Address"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/AboutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/AddressBtn"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/et_style"
        android:text="About"
        android:gravity="center_horizontal" />
    <Button
        android:id="@+id/LocateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="25dp"
        android:background="@drawable/btn_style"
        android:text="Turn On Location"
        app:layout_constraintTop_toBottomOf="@+id/AboutBtn"
        tools:layout_editor_absoluteX="30dp"/>

    <Button
        android:id="@+id/SignOutBtn"
        android:text="Sign Out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/et_style"
        app:layout_constraintTop_toBottomOf="@id/LocateBtn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="bottom">
        <ImageButton
            android:id="@+id/SearchTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_search"
            android:src="@drawable/search_icon"
            android:background="@color/btn_red"
            />
        <ImageButton
            android:id="@+id/OrderTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_order"
            android:src="@drawable/order_icon"
            android:background="@color/btn_red"
            />
        <ImageButton
            android:id="@+id/AccountTab"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:contentDescription="@string/title_account"
            android:src="@drawable/account_icon"
            android:background="@color/green"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>